--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^6.2.0",
+    "jsonwebtoken": "^8.5.0",
     "mysql": "^2.16.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
