--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@nestjs/typeorm": "^5.3.0",
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.2.0",
+    "class-validator": "^0.9.1",
     "dotenv": "^6.2.0",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
     "mysql": "^2.16.0",
     "reflect-metadata": "^0.1.12",
