--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@nestjs/core": "^5.4.0",
     "@nestjs/typeorm": "^5.3.0",
     "@types/bcryptjs": "^2.4.2",
+    "aws-sdk": "^2.409.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "dotenv": "^6.2.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "mysql": "^2.16.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
